--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,82 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetails"
-    android:orientation="vertical"
-    android:id="@+id/detailsLayout">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/details_drawer_layout"
+    android:fitsSystemWindows="true">
 
-    <include
-        android:id="@+id/details_toolbar"
-        layout="@layout/my_toolbar"/>
-
-    <ImageView
-        android:id="@+id/poster"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="258dp"
+        android:layout_height="match_parent"
+        tools:context=".MovieDetails"
+        android:orientation="vertical"
+        android:id="@+id/detailsLayout">
 
-        />
+        <include
+            android:id="@+id/details_toolbar"
+            layout="@layout/my_toolbar"/>
+
+        <ImageView
+            android:id="@+id/poster"
+            android:layout_width="match_parent"
+            android:layout_height="258dp"
+
+            />
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/movieTitle"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="test"
+                android:textColor="#000"
+                android:textSize="24sp"
+                android:layout_marginLeft="3dp"/>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/FAButton"
+                android:elevation="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/movieTitle"
+
+                android:src="@drawable/watchlist" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/rate_btn"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="Rate" />
+
+            <NumberPicker
+                android:id="@+id/number_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="54dp"
+                android:layout_toRightOf="@id/rate_btn">
+
+            </NumberPicker>
+
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/movieTitle"
-            android:layout_width="300dp"
+            android:id="@+id/movieInfo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="test"
             android:textColor="#000"
-            android:textSize="24sp"
-            android:layout_marginLeft="3dp"/>
+            android:textSize="16sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="5dp"
+            android:scrollbars="vertical"
+            android:maxLines="6"
+            />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/FAButton"
-            android:elevation="6dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/movieTitle"
+    </LinearLayout>
 
-            android:src="@drawable/watchlist" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/rate_btn"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="Rate" />
-
-        <NumberPicker
-            android:id="@+id/number_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="54dp"
-            android:layout_toRightOf="@id/rate_btn">
-
-        </NumberPicker>
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/movieInfo"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textSize="16sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="5dp"
-        android:scrollbars="vertical"
-        android:maxLines="6"
-        />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_view"
+        app:headerLayout="@layout/nav_header"/>
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
