--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/home"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_search"
             android:icon="@drawable/search"
             android:title="Search" />
@@ -18,5 +22,4 @@
             android:icon="@drawable/rate"
             android:title="Ratings" />
     </group>
-
 </menu>
