--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:stateListAnimator="@null"
-            android:text="Search for a movie by Title"
+            android:text="@string/search_for_a_movie_by_title"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/search_by_genre_Btn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:stateListAnimator="@null"
-            android:text="Discover a new Movie"
+            android:text="@string/discover_a_new_movie"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/watch_list_btn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
             android:elevation="10dp"
             android:fontFamily="sans-serif-condensed"
             android:stateListAnimator="@null"
-            android:text="Watchlist"
+            android:text="@string/watchlist"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
             android:id="@+id/ratings_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Ratings"
+            android:text="@string/ratings"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/watch_list_btn"
