--- a/app/src/main/res/layout/activity_display_results.xml
+++ b/app/src/main/res/layout/activity_display_results.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="18dp"
-            android:text="Search"
+            android:text="@string/search"
             style="@style/Widget.AppCompat.Button.Colored"
             />
 
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="Reset"
+            android:text="@string/reset"
             style="@style/Widget.AppCompat.Button.Colored"
             />
 
