--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MovieDBApp"
+        android:text="@string/app_name"
         android:textSize="48sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
