--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -4,22 +4,22 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/home"
-            android:title="Home" />
+            android:title="@string/home" />
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/search"
-            android:title="Search" />
+            android:title="@string/search" />
         <item
             android:id="@+id/nav_discover"
             android:icon="@drawable/discover"
-            android:title="Discover" />
+            android:title="@string/discover" />
         <item
             android:id="@+id/nav_watchlist"
             android:icon="@drawable/watchlist"
-            android:title="Watchlist" />
+            android:title="@string/watchlist" />
         <item
             android:id="@+id/nav_ratings"
             android:icon="@drawable/rate"
-            android:title="Ratings" />
+            android:title="@string/ratings" />
     </group>
 </menu>
