--- a/app/src/main/res/layout/activity_filter_results.xml
+++ b/app/src/main/res/layout/activity_filter_results.xml
@@ -46,7 +46,7 @@
             android:id="@+id/filterSearch_btn"
             android:layout_width="82dp"
             android:layout_height="51dp"
-            android:layout_below="@+id/year_edit_text"
+            android:layout_below="@+id/search_edit_text"
             android:layout_centerHorizontal="true"
             android:text="@string/search"
             style="@style/Widget.AppCompat.Button.Colored"/>
@@ -65,22 +65,11 @@
             android:layout_width="72dp"
             android:layout_height="51dp"
             android:layout_alignTop="@+id/filterSearch_btn"
+            android:layout_below="@id/search_edit_text"
             android:layout_alignParentStart="true"
             android:layout_marginStart="4dp"
             android:layout_marginTop="0dp"
             android:text="@string/reset"
-            style="@style/Widget.AppCompat.Button.Colored"/>
-
-        <Button
-            android:id="@+id/findID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/search_edit_text"
-            android:layout_marginLeft="1dp"
-            android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@id/search_edit_text"
-            android:text="@string/get_actor_id"
-            android:inputType="textPersonName"
             style="@style/Widget.AppCompat.Button.Colored"/>
 
         <EditText
@@ -90,14 +79,14 @@
             android:ems="10"
             android:hint="@string/enter_actor_name"
             android:inputType="textPersonName"
-            android:layout_below="@+id/genre_spinner"
+            android:layout_below="@+id/year_edit_text"
             />
 
         <EditText
             android:id="@+id/year_edit_text"
             android:layout_width="222dp"
             android:layout_height="45dp"
-            android:layout_below="@id/search_edit_text"
+            android:layout_below="@id/genre_spinner"
             android:ems="10"
             android:hint="@string/enter_year" />
         <RadioGroup
@@ -105,14 +94,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_toRightOf="@id/year_edit_text"
-            android:layout_below="@id/findID">
+            android:layout_below="@id/genre_spinner">
 
             <RadioButton
                 android:id="@+id/before_radio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/search_edit_text"
-                android:layout_alignStart="@+id/findID"
                 android:text="@string/before" />
 
             <RadioButton
