--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,93 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/details_drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
+        android:id="@+id/details_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MovieDetails"
-        android:orientation="vertical"
-        android:id="@+id/detailsLayout">
+        android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/details_toolbar"
-            layout="@layout/my_toolbar"/>
-
-        <ImageView
-            android:id="@+id/poster"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/detailsLayout"
             android:layout_width="match_parent"
-            android:layout_height="258dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".MovieDetails">
 
-            />
+            <include
+                android:id="@+id/details_toolbar"
+                layout="@layout/my_toolbar" />
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/movieTitle"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:text="@string/test"
-                android:textColor="#000"
-                android:textSize="24sp"
-                android:layout_marginLeft="3dp"/>
+            <ImageView
+                android:id="@+id/poster"
+                android:layout_width="match_parent"
+                android:layout_height="258dp"
+                />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/FAButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_gravity="right"
                 android:elevation="6dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/movieTitle"
-
                 android:src="@drawable/watchlist" />
-        </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/rate_btn"
-                style="@style/Widget.AppCompat.Button.Colored"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/rate_btn"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="8dp"
+                    android:text="@string/rate" />
+
+                <NumberPicker
+                    android:id="@+id/number_picker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="54dp"
+                    android:layout_toRightOf="@id/rate_btn">
+
+                </NumberPicker>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/movieInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:text="@string/rate" />
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="#000"
+                android:textSize="24sp" />
 
-            <NumberPicker
-                android:id="@+id/number_picker"
+            <TextView
+                android:id="@+id/tagline_textView"
                 android:layout_width="wrap_content"
-                android:layout_height="54dp"
-                android:layout_toRightOf="@id/rate_btn">
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
 
-            </NumberPicker>
+            <TextView
+                android:id="@+id/runtime_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
 
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/budget_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
 
-        <TextView
-            android:id="@+id/movieInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textSize="16sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="5dp"
-            android:scrollbars="vertical"
-            android:maxLines="6"
-            />
+            <TextView
+                android:id="@+id/revenue_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/date_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
+
+            <TextView
+                android:id="@+id/genre_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
+
+            <TextView
+                android:id="@+id/overview_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="24sp"/>
+
+        </LinearLayout>
+    </ScrollView>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
@@ -96,7 +148,7 @@
         android:layout_gravity="start"
         android:background="@android:color/white"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_view"
-        app:headerLayout="@layout/nav_header"/>
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_view" />
 
 </android.support.v4.widget.DrawerLayout>
