Added more genres for discover filtering

--- a/app/src/main/res/values/genres.xml
+++ b/app/src/main/res/values/genres.xml
@@ -6,6 +6,9 @@
         <item>Adventure</item>
         <item>Animation</item>
         <item>Comedy</item>
+        <item>Drama</item>
+        <item>Documentary</item>
         <item>Horror</item>
+        <item>Science Fiction</item>
     </string-array>
 </resources>
